[package]
name = "autover"
version = "0.0.0-replaceme"
authors = ["Laurence Pakenham-Smith <laurence@sourceless.org>"]
edition = "2018"
description = "Automatic versioning with git notes"
license = "MIT"
homepage = "https://github.com/Sourceless/autover"
documentation = "https://github.com/Sourceless/autover#readme"
repository = "https://github.com/Sourceless/autover"
readme = "README.md"
keywords = ["versioning", "git"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
git2 = "0.13"
semver = "0.11"
regex = "1"
lazy_static = "1"
clap = "~2.33.3"
tempfile = "~3.2.0"
